2012-01-03  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* ProxyCharacter.cs:
	  Fixed the Bang.Server.ProxyCharacter.HasCardEffect() method.

	* Player.cs:
	* CalamityJanet.cs:
	* ApacheKid.cs:
	* BelleStar.cs:
	* VeraCuster.cs:
	* ElenaFuente.cs:
	  Fixed OnUsedAbility reporting.

	* GameCycle.cs:
	* TableCard.cs:
	* Jail.cs:
	* Dynamite.cs:
	  Fixed predraw checks priority.

2012-01-01  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* SessionPlayer.cs:
	  Fixed synchronization error when replacing a player.

2011-10-28  WOnder93  <omosnacek@gmail.com>

	* Bang# Server Daemon.csproj:
	  Migrated to Mono/.NET 4.0
	Updated to comply with the new C# standard.

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Session/Game/PlayerControl.cs:
	  Fixed bad parameter passing when firing the OnNewRequest
	  event.

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Session/Game/Cards/TargetCardCard.cs:
	* Session/Game/Cards/TargetPlayerCard.cs:
	* Session/Game/Cards/TargetCardTableCard.cs:
	* Session/Game/Cards/TargetCardGoldenCard.cs:
	* Session/Game/Cards/TargetPlayerTableCard.cs:
	* Session/Game/Cards/TargetPlayerGoldenCard.cs:
	  Added check for HasCardEffect() so that for example you
	  can't play a Diamond Bang on Apache Kid.

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Session/Session.cs:
	* Session/Game/Game.cs:
	  Changed the algorithm for generating characters for game in
	  order to avoid duplicate characters in the game.

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Session/Game/Player.cs:
	  Changed the way that the 'missed' effect of a card is
	  evaluated so that Elena Fuente can respond with Dodge and
	  still draw 1 card.

2011-09-29  WOnder93  <omosnacek@gmail.com>

	* AssemblyInfo.cs:
	  

	* Server.cs:
	  Unlock server if an exception is thrown in
	  Bang.Server.Server.CreateSession().
